# e-comm-rust

./: .gitignore  Cargo.toml  README.md
.zed/: debug.json
user_auth_service/: Cargo.toml  README.md
user_auth_service/.github/instructions/: rust.instructions.md
user_auth_service/.sqlx/: query-24e69bde38b456a110f73aa1296fc6d9a2eb067e7e83c86f68be3e3ce3448756.json  query-548a7c3d92187fb8f1d3c91a2a19d0e532b9e9b33474284f8001f8abc19781b4.json  query-89d512fd5b8ded37f52df3dda8520ff1fbf4a95d9b412370ebd3aeebccb762c0.json  query-974562077155bb5f631e2c08ba9a72c241898f6d8cd7546f8e60d58adeeac2f7.json  query-9a10b5848ac8840b93c20cf2be4e0e17c651c3a7b3928385e8ceec3b9292caaf.json  query-a23ecfff5df3bf45cd420e6ff75ffbfbbfef9aaf1fd19116db00a52d8c063402.json  query-b8172866fd0848765d0588c6444e90538dfa89b91386b8a71a34e74a954ba7ea.json  query-fea9bb9094f56bf968a62ce379ab3ee5a9d41463175353d86d6d45d35a6b657c.json
user_auth_service/insomnia/: user-auth-service.yaml
user_auth_service/migrations/: 20250914094146_create_users.sql
user_auth_service/src/: config_utility.rs  dtos.rs  main.rs  models.rs  repos.rs  traits.rs
user_auth_service/src/config_utility/: config_loader.rs  load_config.rs
user_auth_service/src/controllers/: user_controller.rs
user_auth_service/src/dtos/: create_user_dto.rs  delete_user_dto.rs  deleted_user_dto.rs  update_user_dto.rs  user_dto.rs  user_is_active_dto.rs
user_auth_service/src/models/: app_error.rs  app_state.rs  paginated_response.rs  pagination.rs  user.rs  validated_json.rs
user_auth_service/src/repos/: repository_traits.rs  user_repo.rs
(+34 files in other folders)
