[package]
name = "user_auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.221", features = ["derive"] }
serde_derive = "1.0.221"
serde_json = "1.0.144"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde"]}
