[package]
name = "user_auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
auto_impl = "1.3.0"
axum = { version = "0.8.4", features = ["macros"]}
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.15"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.221", features = ["derive"] }
serde_derive = "1.0.221"
serde_json = "1.0.144"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal"] }
toml = "0.9.5"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"]}
validator =  { version = "0.20.0", features = ["derive"] }
